✨ fix(web): navigation sidebar not visible on small screens! (#450)
* ✨ fix(web): navigation sidebar not visible on small screens!

* Revert docusaurus.config.js

--- a/web/src/css/custom.css
+++ b/web/src/css/custom.css
@@ -134,3 +134,8 @@
 .ant-card-meta-title {
   margin-bottom: 0;
 }
+
+.navbar-sidebar {
+  height: 100vh;
+  position: fixed;
+}
